<resources>
    <string name="app_name">Hackaton</string>
    <string name="Filtros">Filtros</string>
    <string name="SinEscalas">Sin Escalas</string>
    <string name="UnaEscala">1 Escala</string>
    <string name="MasDeUnaEscala">Mas De Una Escala</string>
    <string name="Aerolineas">Aerolineas</string>
    <string name="Avianca">Avianca</string>
    <string name="Copa">Copa Airlines</string>
    <string name="Latam">Latam Airlines</string>
    <string name="Wingo">Wingo</string>
    <string name="Precios">Precios menores a 2.000.000</string>
    <string name="Horarios">Franja Horarios De Salida</string>
    <string name="AntesHora">Antes De Las 6 AM</string>
    <string name="EntreHoras">Entre 6 AM Y 12 AM</string>
    <string name="RangoPrecios">Rango De Precios</string>
    <string name="OrdenarPor">Ordenar Por</string>
    <string name="Precios2">Precios:</string>
    <string name="Duracion">Duración:</string>
    <string name="HoraSalida">Hora De Salida:</string>
    <string name="HoraLlegada">Hora De LLegada:</string>
    <string-array name="RangoPrecios">
        <item>Escoger Un Precio</item>
        <item>1.000.000 a 2.000.000</item>
        <item>2.100.000 a 3.000.000</item>
        <item>3.100.000 a 4.000.000</item>
        <item>4.100.000 en adelante</item>
    </string-array>
    <string-array name="RangoDuracion">
        <item>Escoger Una Duración</item>
        <item>Más Corto</item>
        <item>Intermedio</item>
        <item>Más Largo</item>
    </string-array>
    <string-array name="RangoSalidas">
        <item>Escoger Una Hora De Salida</item>
        <item>Más Temprano</item>
        <item>Intermedio</item>
        <item>Más Tarde</item>
    </string-array>
    <string-array name="RangoLlegadas">
        <item>Escoger Una Hora De LLegada</item>
        <item>Más Temprano</item>
        <item>Intermedio</item>
        <item>Más Tarde</item>
    </string-array>
    <string name="ReservaHoteles">Reserva Hoteles</string>
    <string name="ReservaRestaurantes">Reserva Restaurantes</string>
    <string name="DetallesAgencia">Detalles Agencia</string>
    <string name="HotelesBogota">Hoteles Bogotá</string>
    <string name="RestaurantesBogota">Restaurantes Bogotá</string>
    <string name="Reservar">Reservar</string>
    <string name="Buscardor">Buscar Hotel</string>
    <string name="Buscador2">Buscar Restaurante</string>
    <string name="Detalles">Eco Travel es una agencia de viajes en Costa Rica especializada en Ecoturismo.</string>
    <string name="Detalles2">Ofrece una experiencia única al usuario en donde se mezcla la naturaleza con la comodidad.</string>
    <string name="Detalles3">Estos son algunos destinos que podras disfrutar con Eco Travel.</string>
    <string name="Perfil">Perfil</string>
    <string name="NombrePerfil">Juan Rodriguez</string>
    <string name="Correo">juanrodriguez@gmail.com</string>
    <string name="Telefono">310 421 2321</string>
    <string name="MostrarPerfil">Mostrar Perfil</string>
    <string name="MisViajes">Mis viajes</string>
    <string name="Puntos">Puntos SmartTravel</string>
    <string name="ModoPago">Modo de pago guardado</string>
    <string name="Ayuda">Ayuda</string>
    <string name="Configuracion">Configuración</string>
    <string name="PuntosSmart">Puntos SmartTravel</string>
    <string name="TotalPuntos">Total puntos:</string>
    <string name="NumeroPuntos">2.000</string>
    <string name="PrecioEquivalente">Precio Equivalente:</string>
    <string name="TotalPrecio">$240.800</string>
    <string name="RedimirPuntos">Redimir puntos en:</string>
    <string name="Viajes">Viajes</string>
    <string name="PlanesTuristicos">Planes Turísticos</string>
    <string name="Transporte">Transporte</string>
    <string name="DetallesPago">Detalles Pago</string>
    <string name="DescargarFactura">Descargar Factura</string>
    <string name="ValidacionID">Validación ID:</string>
    <string name="InfoValidacion">Lleve una prueba de identificación con fotografía válida (licencia de conducir, pasaporte o cualquier otra identificación con fotografía reconocida por el gobierno).</string>
    <string name="TotalPagado">Total pagado:</string>
    <string name="TotalPrecio2">$633.200</string>
    <string name="VerDetallesPago">Ver detalles de pago</string>
    <string name="ContactoPrimario">Contacto primario:</string>
    <string name="AtencionCliente">Atención al cliente</string>
    <string name="ResolverConsultas">Resolver consultas lo antes posible</string>
    <string name="SolicitarAyuda">Solicitar Ayuda</string>
    <string name="Proximamente">Próximamente</string>
    <string name="Completado">Completado</string>
    <string name="Fecha">15 al 17 de Julio</string>
    <string name="Fecha2">5 al 12 de Diciembre</string>
    <string name="Fecha3">2 al 12 de Mayo</string>
    <string name="Fecha4">10 al 18 de Enero</string>
    <string name="Colombia">Colombia</string>
    <string name="CostaRica">Costa Rica</string>
    <string name="Brasil">Brasil</string>
    <string name="ModificarViaje">Modificar Viaje</string>
    <string name="DuracionViaje">2 días de viaje</string>
    <string name="DuracionViaje2">7 días de viaje</string>
    <string name="DuracionViaje3">10 días de viaje</string>
    <string name="DuracionViaje4">8 días de viaje</string>
    <string name="NoReserva">¿No encuentra una reserva?</string>
    <string name="AñadirReserva">Añadir Reserva</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Sugerencias">Sugerencias</string>
    <string name="VerViaje">Ver Viaje</string>
    <string name="VerRestaurante">Ver Restaurante</string>
    <string name="Restaurante">Oliveto Pizza Y Pasta Parkway</string>
    <string name="Direccion">Calle 43 # 58 Bogotá</string>
    <string name="NotificacionesSistema">Notificaciones Sistema</string>
    <string name="ErrorDatos">Error con los datos del viajero</string>
    <string name="RevisarDatos">Revisar Datos</string>
    <string name="Hilton">Hilton Bogotá</string>
    <string name="HiltonUbicacion">Chapinero | 8.6 KM del aeropuerto</string>
    <string name="GrandHyatt">Grand Hyatt Bogotá</string>
    <string name="HyattUbicacion">Teusaquillo | 7.4 KM del aeropuerto</string>
    <string name="PetFriendly">PET FRIENDLY</string>
    <string name="Precio">$174.2</string>
    <string name="Precio2">$199.9</string>
    <string name="PorNoche">Por noche</string>
    <string name="Restaurante1">Oliveto Pizza Y Pasta Parkway</string>
    <string name="Restaurante2">Cantina La 15</string>
    <string name="Restaurante1Ubicacion">Calle 44 # 13</string>
    <string name="Restaurante2Ubicacion">Carrera 13 # 83 Zona T</string>
    <string name="PalabraPrecios">Precios</string>
    <string name="PreciosRestaurante">$25 | $50</string>
    <string name="PreciosRestaurante2">$40 | $120</string>
    <string name="EcoTravel">Eco Travel</string>
    <string name="EcoTravelDireccion">Avenida Huddson 23</string>
    <string name="DetallesViaje">Detalles Viaje</string>
    <string name="museos">Museos</string>
    <string name="por_costa_rica_tours">Por: Costa Rica Tours</string>
    <string name="_4_5">4.5</string>
    <string name="excelente">Excelente</string>
    <string name="calificado_por_all_travellers_720">Calificado por all travellers (720)</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>