<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Detalles_Agencia">

    <TextView
        android:id="@+id/textDetAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingBottom="30dp"
        android:text="@string/DetallesAgencia"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/xButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/foto1"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_below="@id/textDetAge"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/det1" />

    <TextView
        android:id="@+id/detaAgencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foto1"
        android:paddingBottom="10dp"
        android:text="@string/Detalles"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detaAgencia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detaAgencia"
        android:paddingBottom="20dp"
        android:text="@string/Detalles2"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/foto2"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_below="@id/detaAgencia2"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/det2" />

    <TextView
        android:id="@+id/detaAgencia3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foto2"
        android:paddingBottom="20dp"
        android:text="@string/Detalles3"
        android:textSize="18sp" />

</RelativeLayout>